--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <div class="cover">
     <img src="bhekumuzi.jpg" heigt="30%" width="30%" />
-    <h1>Bhekumuzi Sodinga</h1>
+    <h1>President Bhekumuzi</h1>
     <P>Aspiring Web developer and Network Technician </P>
     <p><strong>Welcome to my page</strong></p>
 </div>
