--- a/Skills.html
+++ b/Skills.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+  <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +7,16 @@
   <title>Document</title>
   <link rel="stylesheet" href="mystyle15.css">
   
-
+  
 </head>
 <body>
-<header>
   
 
 
+
+<header>
+      
+       
 </header>
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -23,7 +26,7 @@
   <a href="Contact.html">Contact</a>
   <a href="Socials.html">Socials</a>
 </div>
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;Home</span>
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;Skills</span>
 
 <script>
   function openNav() {
@@ -35,13 +38,32 @@
   }
   </script>
 
-<div class="cover">
-    <img src="bhekumuzi.jpg" heigt="30%" width="30%" />
-    <h1> Bhekumuzi Sodinga</h1>
-    <P>Aspiring Web developer and Network Technician </P>
-    <p><strong>Welcome to my page</strong></p>
-</div>
+ <br>
+ <br>
+<br>
+<br>
+<br>
 
+<div class="Skills">
+HTML: <progress min="0" max="100" value="50"></progress> <br>
+<br>
+<br>
+CSS:  <progress min="0" max="100" value="40"></progress> <br>
+<br>
+<br>
+CCNA1: <progress min="0" max="100" value="80"></progress> <br>
+<br>
+<br>
+CCNA2: <progress min="0" max="100" value="75"></progress> <br>
+<br>
+<br>
+
+IOT: <progress min="0" max="100" value="70"></progress> <br>
+
+</div>
 <footer></footer>
 </body>
+
+
+
 </html>
